--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.2",
-    "path": "^0.12.7"
+    "nodemon": "^3.0.2"
   }
 }
