Swagger adding complete, wrote documentation for interviewwerListController

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,34 @@
-PORT= "5000"
+PORT = "5000"
 
-mongoPass= "QUNLocjJ8cZnYeT0"
+mongoPass = "QUNLocjJ8cZnYeT0"
 
-DB_URI= "mongodb+srv://pjitendra6957:QUNLocjJ8cZnYeT0@cluster0.zk5rcnc.mongodb.net/dhanda?retryWrites=true&w=majority"
+DB_URI = "mongodb+srv://pjitendra6957:QUNLocjJ8cZnYeT0@cluster0.zk5rcnc.mongodb.net/dhanda?retryWrites=true&w=majority"
 
-SECURITY_KEY= "dhanda"
+SECURITY_KEY = "dhanda"
 
-EMAIL= "<Apni Outlook ID>"
-EMAIL_PASSWORD= "<Outlook Password>"
+EMAIL = "interviewHub6957@outlook.com"
+EMAIL_PASSWORD = "Iamgoingin1@"
 
-ENCRYPT_KEY= "interview_hub_6957"
+ENCRYPT_KEY = "interview_hub_6957"
 
-BASE_URL= "/api/v1/"
+BASE_URL = "/api/v1/"
+
+
+GOOGLE_CLIENT_ID = "212446375996-3194n37jsko5rkifgppbbf0ofc448fan.apps.googleusercontent.com"
+
+GOOGLE_CLIENT_SECRET = "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"
+
+MICROSOFT_CLIENT_ID = "162697e0-ab56-4bb9-b8c8-f2c0d3bba25c"
+
+MICROSOFT_TENANT_ID = "850aa78d-94e1-4bc6-9cf3-8c11b530701c"
+
+MICROSOFT_CLIENT_SECRET_VALUE = "_.S8Q~fB2lpwDtt8YEvJPAkfsY9EqeREcw1lOarz"
+
+MICROSOFT_CLIENT_SECRET_ID = "MICROSOFT_CLIENT_SECRET_ID"
+
+AWS_ACCESS_KEY_ID = "AKIAR5AIHQPGGQ4HH7PL"
+AWS_SECRET_ACCESS_KEY = "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"
+BUCKET_REGION = "ap-south-1"
+
+DEVELOPMENT = true
+LOGGING_ENABLED = true
