Made generate order id controller/api

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,6 @@ BUCKET_REGION = "ap-south-1"
 
 DEVELOPMENT = true
 LOGGING_ENABLED = true
+
+RAZORPAY_KEY_ID = <razorpay key id>
+RAZORPAY_KEY_SECRET = <razorpay key secret>
