--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --setupFiles dotenv/config",
     "start": "nodemon src/app.js"
   },
   "keywords": [],
@@ -32,9 +32,11 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-microsoft": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "razorpay": "^2.9.2"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   }
