--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
@@ -22,6 +23,7 @@
     "handlebars": "^4.7.8",
     "json-web-token": "^3.2.0",
     "method-override": "^3.0.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.8",
