--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "aws-sdk": "^2.1554.0",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
+    "google-auth-library": "^9.7.0",
+    "googleapis": "^105.0.0",
     "handlebars": "^4.7.8",
     "json-web-token": "^3.2.0",
     "method-override": "^3.0.0",
