--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "googleapis": "^105.0.0",
     "handlebars": "^4.7.8",
     "json-web-token": "^3.2.0",
+    "json2csv": "^6.0.0-alpha.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
@@ -38,6 +41,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-microsoft": "^1.0.0",
     "path": "^0.12.7",
+    "pdfkit": "^0.15.0",
     "razorpay": "^2.9.2"
   },
   "devDependencies": {
